# bevy_sprite_animation_test

./: .gitignore  Cargo.toml  build.rs
assets/anim/: barbarian_archer.ExportJson  barbarian_boss.ExportJson  barbarian_boss_0.plist  barbarian_boss_1.plist  barbarian_boss_2.plist
assets/textures/raw/: ammunations.plist  archer_soldier.plist  barbarian_archer.plist  barbarian_elite.plist  barbarian_infantry.plist  cabalist.plist  faerie_dragon.plist  fangyan.plist  frog_summon.plist
crates/sprite_test/: Cargo.toml
crates/sprite_test/src/: lib.rs  sprite_tt.rs
crates/swj/: Cargo.toml
crates/swj/src/: clash.rs  cocos2d_anim.rs  game.rs  lib.rs  map.rs  pf_controller.rs  sprite_debug.rs  sprite_sheet.rs  sprite_tt.rs  unit.rs
crates/swj/src/cocos2d_anim/: anim.rs  mod.rs  sprite_sheet.rs
crates/swj/src/effect/: mod.rs  motion_tail.rs
crates/swj/src/resource/: mod.rs
crates/swj/src/resource/action/: melee.rs  mod.rs  projectile.rs
crates/swj/src/rpg/: mod.rs  player.rs  progress_map.rs
crates/swj_utils/: Cargo.toml
crates/swj_utils/src/: lib.rs
examples/my_winit/: mac_winit.rs  main.rs
examples/plist_sprite/: main.rs
examples/rust_beginner/: main.rs
examples/sprite_mac/: main.rs
examples/tmx_map/: main.rs
examples/what_sprite/: main.rs
src/: lib.rs
