[package]
name = "rust_sprite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "/Users/rqg/Playground/bevy" }
rand = "0.8.5"
bytemuck = "1.7"


[lib]
name = "rust_sprite"
crate-type = ["staticlib", "cdylib"]

[package.metadata.android.sdk]
target_sdk_version = 31
min_sdk_version = 24

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
package = "org.bevyengine.example"
apk_name = "bevyexample"
assets = "assets"
resources = "assets/android-res"
strip = "strip"


[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Bevy Example"

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1