[package]
name = "rust_sprite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swj = { path = "crates/swj" }
bevy = { path = "/Users/rqg/Playground/bevy", default-features = false, features = ["bevy_render", "bevy_asset", "bevy_sprite", "bevy_audio", "bevy_text", "bevy_ui", "bevy_audio"] }
rand = "0.8.5"
bytemuck = "1.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
plist = "1.6.0"
winit = "0.28.7"
raw-window-handle = "0.5.2"
serde_xml = "0.9.1"

[workspace]
exclude = [
]
members = [
    "crates/*",
]

[lib]
name = "rust_sprite"
crate-type = ["cdylib", ]


[package.metadata.android.sdk]
target_sdk_version = 31
min_sdk_version = 24

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
package = "org.bevyengine.example"
apk_name = "bevyexample"
assets = "assets"
resources = "assets/android-res"
strip = "strip"


[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Bevy Example"

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[package.metadata.android.signing.release]
path = "/Users/rqg/Playground/ProjectX/proj.android/key"
keystore_password = "WhatPassword"

[[example]]
name = "sprite_mac"
path = "examples/sprite_mac/main.rs"

[[example]]
name = "what_sprite"
path = "examples/what_sprite/main.rs"

[[example]]
name = "plist_sprite"
path = "examples/plist_sprite/main.rs"

[[example]]
name = "rust_beginner"
path = "examples/rust_beginner/main.rs"

[[example]]
name = "my_winit"
path = "examples/my_winit/main.rs"

[[example]]
name = "tmx_map"
path = "examples/tmx_map/main.rs"

