[package]
name = "swj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "/Users/rqg/Playground/bevy", features = ["mp3"] }
rand = "0.8.5"
bytemuck = "1.7"
plist = "1.6.0"
serde_json = "1.0.108"
serde_xml = "0.9.1"
swj_utils = { path = "../swj_utils" }
thiserror = "1.0.57"

